# Darkly

./: CMakeLists.txt  GlassConfig.cmake.in  README.md  flake.nix  install.sh  org.kde.KStyle.Glass5.json  org.kde.KStyle.Glass6.json  uninstall.sh
colors/: CMakeLists.txt
kdecoration/: CMakeLists.txt  Messages.sh  config-glass.h.cmake  glass.h  glass.json  glassbutton.cpp  glassbutton.h  glassdecoration.cpp  glassdecoration.h  glassexceptionlist.cpp  glassexceptionlist.h  glasssettings.kcfgc  glasssettingsdata.kcfg  glasssettingsprovider.cpp  glasssettingsprovider.h
kdecoration/config/: CMakeLists.txt  glassconfigwidget.cpp  glassconfigwidget.h  glassdecorationconfig.desktop  glassdetectwidget.cpp  glassdetectwidget.h  glassexceptiondialog.cpp  glassexceptiondialog.h  glassexceptionlistwidget.cpp  glassexceptionlistwidget.h  glassexceptionmodel.cpp  glassexceptionmodel.h  glassitemmodel.cpp  glassitemmodel.h  glasslistmodel.h  kcm_glassdecoration.cpp  kcm_glassdecoration.json
kdecoration/config/ui/: glassconfigurationui.ui  glassdetectwidget.ui  glassexceptiondialog.ui  glassexceptionlistwidget.ui
kstyle/: CMakeLists.txt  config-glass.h.cmake  darkly.kcfg  darklystyle.cpp  glass.h  glass.json  glass.kcfg  glass.themerc  glassaddeventfilter.cpp  glassaddeventfilter.h  glassblurhelper.cpp  glassblurhelper.h  glassframeshadow.cpp  glassframeshadow.h  glasshelper.cpp  glasshelper.h  glassmdiwindowshadow.cpp  glassmdiwindowshadow.h  glassmnemonics.cpp  glassmnemonics.h  glasspropertynames.cpp  glasspropertynames.h  glassshadowhelper.cpp  glassshadowhelper.h  glasssplitterproxy.cpp  glasssplitterproxy.h  glassstyle.cpp  glassstyle.h  glassstyleconfigdata.kcfgc  glassstyleplugin.cpp  glassstyleplugin.h  glasstileset.cpp  glasstileset.h  glasstoolsareamanager.cpp  glasstoolsareamanager.h  glasswindowmanager.cpp  glasswindowmanager.h
kstyle/animations/: glassanimation.cpp  glassanimation.h  glassanimationdata.cpp  glassanimationdata.h  glassanimations.cpp  glassanimations.h  glassbaseengine.cpp  glassbaseengine.h  glassbusyindicatordata.cpp  glassbusyindicatordata.h  glassbusyindicatorengine.cpp  glassbusyindicatorengine.h  glassdatamap.h  glassdialdata.cpp  glassdialdata.h  glassdialengine.cpp  glassdialengine.h  glassenabledata.cpp  glassenabledata.h  glassgenericdata.cpp  glassgenericdata.h  glassheaderviewdata.cpp  glassheaderviewdata.h  glassheaderviewengine.cpp  glassheaderviewengine.h  glassscrollbardata.cpp  glassscrollbardata.h  glassscrollbarengine.cpp  glassscrollbarengine.h  glassspinboxdata.cpp  glassspinboxdata.h  glassspinboxengine.cpp  glassspinboxengine.h  glassstackedwidgetdata.cpp  glassstackedwidgetdata.h  glassstackedwidgetengine.cpp  glassstackedwidgetengine.h  glasstabbardata.cpp  glasstabbardata.h  glasstabbarengine.cpp  (+11 more)
kstyle/config/: CMakeLists.txt  Messages.sh  glassstyleconfig.cpp  glassstyleconfig.h  glassstyleconfig.json  glassstyleconfigmodule.cpp  glassstyleconfigmodule.h  main.cpp
kstyle/debug/: glasswidgetexplorer.cpp  glasswidgetexplorer.h
libglasscommon/: CMakeLists.txt  glassboxshadowrenderer.cpp  glassboxshadowrenderer.h
nix/: package.nix
